--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <!-- Google tag (gtag.js) -->
 <script defer src="https://www.googletagmanager.com/gtag/js?id=G-7B19NKLWLF"></script>
-<script>
+<script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
