add fields solution and problematic

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/kaci.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Portfolio de Kaci HAMROUN - Découvrez mes projets, compétences et expériences en développement web full-stack." />
     <title>Portfolio - Kaci HAMROUN</title>
   </head>
   <!-- Google tag (gtag.js) -->
