--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://www.kacihamroun.com" />
     <meta property="og:title" content="Kaci Hamroun - Développeur Full-Stack & Automatisation IA | Lille" />
     <meta property="og:description" content="Développeur full-stack expert en automatisation IA à Lille. Spécialisé en React, Node.js, Python et solutions d'intelligence artificielle." />
-    <meta property="og:image" content="https://www.kacihamroun.com/images/kaci-hamroun-og.jpg" />
+    <meta property="og:image" content="https://www.kacihamroun.com/images/kacipp.webp" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Kaci Hamroun - Portfolio" />
     
@@ -28,9 +28,9 @@
     <meta property="twitter:url" content="https://www.kacihamroun.com" />
     <meta property="twitter:title" content="Kaci Hamroun - Développeur Full-Stack & Automatisation IA" />
     <meta property="twitter:description" content="Développeur full-stack expert en automatisation IA à Lille. Solutions web innovantes et intelligence artificielle." />
-    <meta property="twitter:image" content="https://www.kacihamroun.com/images/kaci-hamroun-twitter.jpg" />
+    <meta property="twitter:image" content="https://www.kacihamroun.com/images/kacipp.webp" />
     
-    <!-- Local Business Schema -->
+    <!-- Local Business Schema -->  
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
