--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <meta property="twitter:description" content="Développeur full-stack expert en automatisation IA à Lille. Solutions web innovantes et intelligence artificielle." />
     <meta property="twitter:image" content="https://www.kacihamroun.com/images/kacipp.webp" />
     
+    <!-- Analytics - Umami -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="db0ecfcd-39c3-4b93-9568-fa2c7a69128a"></script>
+    
     <!-- Local Business Schema -->  
     <script type="application/ld+json">
     {
