--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     
     <!-- SEO Meta Tags -->
-    <title>Kaci Hamroun - Développeur Full-Stack & Automatisation IA | Lille 59000</title>
-    <meta name="description" content="Kaci Hamroun, développeur full-stack spécialisé en automatisation IA à Lille. Expert React, Node.js, Python, intelligence artificielle et solutions d'automatisation sur mesure." />
+    <title>Kaci Hamroun - Full-Stack Developer| AI Automation | Operation Manager </title>
+    <meta name="description" content="Kaci Hamroun, développeur full-stack,automatisation IA et gestion des opérations" />
     <meta name="keywords" content="développeur full-stack, automatisation IA, intelligence artificielle, React, Node.js, Python, développeur web Lille, automatisation processus, machine learning, développeur frontend backend, Kaci Hamroun, freelance développeur Lille" />
     <meta name="author" content="Kaci Hamroun" />
     <meta name="robots" content="index, follow" />
